--- a/src/Card.css
+++ b/src/Card.css
@@ -20,7 +20,7 @@
 }
 
 .card-unclicked {
-    background-color: rgb(244, 243, 241);
+    background-color: white;
 }
 
 .svg-container {
@@ -43,20 +43,31 @@
     stroke-linecap: round;
 }
 
-/* animation: shake 0.5s;
-animation-iteration-count:initial;
-@keyframes shake {
-    
+@media screen and (max-width: 550px) {
+    .card-container {
+        width: 100vw;
+        height: 120px;
+        border: 2px solid grey;
+        background-color: rgb(244, 243, 241);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 5px;
+        border-radius: 5px;
+        cursor:'pointer';
+    }
 
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
-  } */
+    .svg-container {
+        width:50px;
+        height:100px;
+    }
+
+    .card-clicked {
+        background-color: khaki;
+    }
+    
+    .card-unclicked {
+        background-color: rgb(244, 243, 241);
+    }
+
+}
